@@ -1,3 +1,10 @@
+2007-10-10  Michael Kreuzer  <michael-kreuzer@gmx.de>
+
+	* src/dvbcut.cpp:
+	* src/dvbcut.h:
+	* src/dvbcutbase.ui:
+		Add "save snapshot" function to file menu and toolbar
+
 2007-10-08  Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/dvbcut.cpp:
